# graduation_project

./: README.md  subject.md
group1/: README.md  project_plan.md  rules.md
group1/juhon_testit/: ambient_temp.h  heater.h  random_between.h  simplified_project.cpp  units.h
group1/mvp/: CMakeLists.txt
group1/mvp/config/: config_stop.json
group1/mvp/includes/: ambient_temperature.hpp  conveyor.hpp  cooler.hpp  devices.hpp  random_between.hpp
group1/mvp/shm/: shm.hpp
group1/mvp/tests/: conveyor_tests.cpp
group1/proto/: CMakeLists.txt  main.cpp
group1/proto/config/: config_full.json
group1/proto/controller/: controller.cpp
group1/proto/includes/: ambient_temperature.hpp  config.hpp  conveyor.hpp  cooler.hpp  devices.hpp  heater.hpp  product.hpp  quality_control.hpp  simulation.hpp  temperature_sensor.hpp  units.hpp  utils.hpp
group1/proto/shm/: controller.cpp  shm.cpp
group1/proto/tests/: conveyor_tests.cpp  cooler_tests.cpp  heater_tests.cpp  simulation_step_test.cpp  tests.cpp
group1/proto/ui/: ui.cpp
group1/sensors/: simulation.hpp  ti_lm35c.hpp
group2/: README.md
group3/: README.md
production_line_simulation/: CMakeLists.txt  main.cpp
production_line_simulation/includes/: ambient_temperature.hpp  communicator.hpp  conveyor.hpp  cooler.hpp  devices.hpp  product.hpp  quality_control.hpp  random_between.hpp  simulation.hpp  units.hpp  utils.hpp
production_line_simulation/shm/: CMakeLists.txt  shm.hpp
production_line_simulation/tests/: simulation_step_test.cpp  tests.cpp
